<resources>
    <string name="app_name">Book Me Up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password (minimum 8 characters) </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="check_save_login">Save Login</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="version">Version 0.01</string>
    <string name="logo_description">BookMeUp Logo</string>
    <string name="login_fb">Facebook Login</string>
    <string name="login_google">Google Login</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btnRegister">Sign Up</string>
    <string name="success">Success</string>
    <string name="reg_success">Registration Successful</string>
    <string name="reg_failed">Registration Failed</string>
    <string name="checkEmail">Check your email for activation</string>
    <string name="text_homePage">HomePage</string>
    <string name="fill_all_fields">Fill all required fields</string>
    <string name="matchPassword">Password does not match</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="defaultCountry">Canada</string>
    <string name="country">Country:</string>
    <string name="defaultUserName">John Doe</string>
    <string name="rating">Rating</string>
    <string name="selling">Selling:</string>
    <string name="logout">Logout</string>
    <string name="user_s_profile_image">User\'s Profile Image</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="defaultCity">Toronto</string>
    <string name="my_header_title">Menu</string>
    <string name="nav_import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>

    <!-- Strings related to Sign up Page -->
    <string name="email_fld">Email</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="usernameUnavailable">Username is not available</string>

    <!-- Strings related to Profile Page -->
    <string name="userCountry">Canada</string>
    <string name="userAddress">4164 Bay Street</string>
    <string name="register">Sign up</string>


    <!-- Strings related to Pass Reset Page -->
    <string name="reset">Reset Password</string>
    <string name="reset_pageheader">Password Reset</string>
    <string name="reset_boxhint">Account email</string>
    <string name="reset_goback">Go back to login page</string>
    <string name="reset_clickmsg">Please check your email for the reset instructions</string>
    <string name="reset_errmsg">Field cannot be empty</string>



    <!-- Strings related to Ad posting Page -->
    <string name="postad">Lets make a new Post It</string>
    <string name="postad_txt_title">Title:*</string>
    <string name="postad_txt_condition">Condition:*</string>
    <string name="postad_txt_category">Category:</string>
    <string name="postad_txt_isbn">ISBN:</string>
    <string name="postad_txt_price">Asking Price:*</string>
    <string name="postad_txt_loc">Location:</string>
    <string name="postad_txt_promote">Promote Ad for $1.99 ?</string>
    <string-array name="conditions_array">
        <item>Mint or like New</item>
        <item>Minor Scratches</item>
        <item>Damaged</item>
    </string-array>
    <string-array name="location_city_array">   <!-- We will assume for now that the app is only usable in ontario\GTA, more specific locations will be added later -->
        <item>Toronto</item>
        <item>Brampton</item>
        <item>Mississauga</item>
        <item>Etobicoke</item>
        <item>North York</item>
        <item>Richmondhill</item>
        <item>Oakville</item>
        <item>Hamilton</item>
        <item>Scarborough</item>
        <item>Vaughan</item>
        <item>Markham</item>
        <item>Burlington</item>  <!-- Feel free to add more or to arrange them alphabetically -->
    </string-array>






</resources>
