<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profilePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="334dp"
        android:layout_height="174dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/guideline5">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/user_s_profile_image"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileSettings"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/profileSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/setings_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <TextView
            android:id="@+id/profileUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/defaultUserName"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/profileSettings" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="140dp" />

        <TextView
            android:id="@+id/profileCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@+id/profileUserName"
            app:layout_constraintTop_toBottomOf="@+id/profileUserName" />

        <TextView
            android:id="@+id/profileCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="@+id/profileCountry"
            app:layout_constraintTop_toBottomOf="@+id/profileCountry" />

        <TextView
            android:id="@+id/profileAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="@+id/profileCity"
            app:layout_constraintTop_toBottomOf="@+id/profileCity" />

        <TextView
            android:id="@+id/profileRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/rating"
            app:layout_constraintStart_toStartOf="@+id/profileAddress"
            app:layout_constraintTop_toBottomOf="@+id/profileAddress" />

        <TextView
            android:id="@+id/profileUserCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/leftMargin"
            android:layout_marginTop="4dp"
            android:text="@string/userCountry"
            app:layout_constraintStart_toEndOf="@+id/profileCountry"
            app:layout_constraintTop_toBottomOf="@+id/profileUserName" />

        <TextView
            android:id="@+id/profileUserCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/leftMargin"
            android:layout_marginTop="@dimen/topMargin"
            android:text="@string/defaultCity"
            app:layout_constraintStart_toEndOf="@+id/profileCity"
            app:layout_constraintTop_toBottomOf="@+id/profileCountry" />

        <TextView
            android:id="@+id/profileUserAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/leftMargin"
            android:layout_marginTop="@dimen/topMargin"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/profileAddress"
            app:layout_constraintTop_toBottomOf="@+id/profileUserCity" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="80dp"
            android:layout_height="16dp"
            android:layout_marginStart="@dimen/startMargin"
            android:layout_marginTop="@dimen/topMargin"
            android:numStars="5"
            android:rating="2.5"
            android:stepSize="0.5"
            app:layout_constraintStart_toEndOf="@+id/profileRating"
            app:layout_constraintTop_toBottomOf="@+id/profileAddress" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline8" />

    <TextView
        android:id="@+id/profileUserListings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/selling"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="206dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/profileUserListings">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profileUserListedBooks">

        </ListView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>